gcc/testsuite/g++.dg/torture/ifunc-7.C
/* { dg-do compile } */

static int __attribute__ ((ifunc)) foo (int);

/* { dg-error "indirect function .int foo.int.. never defined" ""  { target *-*-* } 3 } */
